--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
   <head>
     <title> Haiku the News </title>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
 
   <body>
-    <div class="left">
-      <h1> Haiku the News </h1>
-      <p>
-        This project was created by <a href="http://www.murphystudebaker.com"> Murphy Studebaker </a>
-        for Chapman University's <a href=""> Student Research Day </a> using the <a href="">
-        Google News API</a>, the <a href=""> PyHyphen </a> and <a href=""> Natural Language Toolkit </a> libraries
-        for language processing, Docker for web distribution, and Django for server-side code.
-      </p>
-    </div>
+    <div class="container">
+      <div class="left">
+        <h1> Haiku the News </h1>
+        <p>
+          This project was created by <a href="http://www.murphystudebaker.com"> Murphy Studebaker </a>
+          for Chapman University's <a href=""> Student Research Day </a> using the <a href="">
+          Google News API</a>, the <a href=""> PyHyphen </a> and <a href=""> Natural Language Toolkit </a> libraries
+          for language processing, Docker for web distribution, and Django for server-side code.
+        </p>
+      </div>
 
-    <div class="right">
-      <h3 class="input-bar"> Enter a search term... </h3>
-      <div class="poem">
-        <p> Line 1 </p>
-        <p> Line 2 </p>
-        <p> Line 3 </p>
-        <p class="source"> Article from: </p>
-      <div>
+      <div class="right">
+        <h3 class="input-bar"> Enter a search term... </h3>
+        <div class="poem">
+          <h4> Line 1 </h4>
+          <h4> Line 2 </h4>
+          <h4> Line 3 </h4>
+          <h4 class="source"> Article from: </h4>
+        <div>
+      </div>
     </div>
   </body>
 </html>
